--- a/css/style.css
+++ b/css/style.css
@@ -63,19 +63,35 @@ body {
 /* ===========================
    DASHBOARD GRID
 =========================== */
-
 .dashboard {
     flex: 1;
     padding: 40px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 180px;
     gap: 25px;
 }
 
 /* ===========================
+   Tailles personnalisées
+=========================== */
+.card-small {
+    grid-row: span 1;
+}
+
+.card-medium {
+    grid-row: span 2;
+}
+
+.card-large {
+    grid-row: span 2;
+    grid-column: span 2;
+}
+
+
+/* ===========================
    CARDS
 =========================== */
-
 .card {
     background: var(--bg-card);
     padding: 20px;
